--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -26,21 +26,22 @@ $font-sizes: (
             2rem
         )
     );
-// Recent Played Card Dimensions (Fluid 320px to 600px)
+// Recent Played Card Dimensions (Fluid 320px to 700px)
 $card-dimensions:(
-    // სიგანე: 15rem (320px-ზე) -> 20rem (600px-ზე)
+    // სიგანე: 15rem (320px-ზე) -> 25rem (700px-ზე)
     recent-width: clamp(
         15rem,
-        calc(15rem + (25 - 15) * ((100vw - 32rem) / 28)),
+        calc(15rem + (25 - 15) * ((100vw - 32rem) / 38)),
         25rem
     ),
-    // სიმაღლე: 3.9rem (320px-ზე) -> 5.5rem (600px-ზე)
+    // სიმაღლე: 3.9rem (320px-ზე) -> 6.5rem (700px-ზე)
     recent-height: clamp(
         3.9rem,
-        calc(3.9rem + (6.5 - 3.9) * ((100vw - 32rem) / 28)),
+        calc(3.9rem + (6.5 - 3.9) * ((100vw - 32rem) / 38)),
         6.5rem
     )
 );
+
 $font-weights: (
     regular: 400,
     medium: 500,
