--- a/scss/layout/_home.scss
+++ b/scss/layout/_home.scss
@@ -196,33 +196,9 @@
       &:nth-child(12) .album-card-subtitle > p:nth-of-type(1) { color: v.$p-lightyellow !important; }
 }
 }
+.made-for-you
   .album_cover_wrapper{
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      img{
-          border-radius: 0.725rem ;
-        z-index: 2;
-      }
-        div:first-child{
-            top:1rem;
-            border-bottom:solid 0.1rem v.$bg-primary;
-            width: 15rem;
-            height:0.6rem;
-            border-radius: 0.725rem  0.725rem 0rem 0rem;
-            background-color: #302128;
-            position: relative;
-        }
-        div:nth-child(2){
-              top: 1rem;
-              position: relative;
-              width:16rem ;
-              height: 1.5rem;
-              border-radius: 0.725rem;
-              background-color: #302128;
-        }
+       @include m.cover_wrapper;
         }
 .album-card-subtitle{
     p{
@@ -267,8 +243,22 @@
      @include m.p-colors;
     }
 }
+// .albums-for-you .album_cover_wrapper {
+//         position: relative;
+//        div{
+//             position: relative;
+//             top: 2rem;
+//             width: 15rem;
+//             height:0.6rem;
+//             z-index: 1;
+//             border-radius: 0.725rem  0.725rem 0rem 0rem;
+//             background-color: #85C585;
+//        }
+// }
 .albums-for-you{
      @include m.album-cards;
+   
+     }
     .album-card-subtitle {
         display: grid;
         h3{
@@ -280,8 +270,12 @@
              font-size: map.get(v.$font-sizes, "body-sm");
         }
     }
+    img{
+         z-index: 1;
+ }
+    
 
-}
+
 .audiobooks-for-you{
     span{
       margin-top: 2rem;
